--- a/client/src/components/definations/Definations.css
+++ b/client/src/components/definations/Definations.css
@@ -1,7 +1,12 @@
 .meanings{
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    scrollbar-width: thin;
+    border: 10px solid rgb(105, 105, 105);
+    border-radius: 10px;
+    padding: 10px 20px;
+    overflow-x: hidden;
+    margin-top: 1%;
 }
 
 .subTitle{
