--- a/client/src/components/definations/Definations.css
+++ b/client/src/components/definations/Definations.css
@@ -1,15 +1,32 @@
 .meanings{
     display: flex;
     flex-direction: column;
-    scrollbar-width: thin;
+    overflow-y: scroll;
+    height: 55vh;
     border: 10px solid rgb(105, 105, 105);
     border-radius: 10px;
     padding: 10px 20px;
     overflow-x: hidden;
     margin-top: 1%;
+    scrollbar-width: thin;
 }
 
 .subTitle{
     font-size: 5vw;
     font-family: "Kumbh Sans";
+}
+
+@media (max-width:900px){
+    .meanings{
+        height: 60vh;
+        overflow-x: hidden;
+    }
+}
+
+.singleMean{
+    display: flex;
+    flex-direction: column;
+    border-radius: 20px;
+    padding: 10px 20px;
+    margin: 10px 0;
 }
