--- a/client/src/components/definations/Definations.css
+++ b/client/src/components/definations/Definations.css
@@ -24,9 +24,13 @@
 }
 
 .singleMean{
-    display: flex;
-    flex-direction: column;
     border-radius: 20px;
     padding: 10px 20px;
     margin: 10px 0;
+}
+
+.audio{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
